# tv-shows-viewers

./: README.md  pyproject.toml  tv-shows-viewers.py
output/dataframes/: average-viewership-byseason.csv  average-viewership-byshow.csv  max-viewership-byshow.csv  min-viewership-byshow.csv  tv-show-viewers.csv
